# atelier

./: README.md  pyproject.toml  query_database.py  requirements.txt
pdf_converter/: __init__.py  config.py  main.py  models.py  test.py  utils.py
pdf_converter/database/: __init__.py  manager.py  models.py
pdf_converter/gui/: __init__.py  main_window.py  widgets.py
pdf_converter/processors/: __init__.py  base.py  excel_writer.py  invoice_processor.py  pdf_processor.py  structured_excel_writer.py
